# efsa_tools

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: codecov.yml  mkdocs.yml
docs/: guide.md
guide/: index.html
search/: search_index.json
src/efsa_tools/: __init__.py  dataframe_utils.py  scd.py
src/efsa_tools/_utils/: _checks.py
tests/: test__checks.py  test_dataframe_utils.py  test_scd.py
