[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efsa-tools"
version = "1.0.0"
description = "EFSA ensemble of data collections tools"
readme = "README.md"
authors = [
    { name = "Lorenzo Copelli" },
    { name = "Luca Belmonte" }
]
maintainers = [
    { name = "Luca Belmonte", email = "luca.belmonte@efsa.europa.eu" }
]
license = "EUPL-1.2"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "eppoPynder>=2.0.0",
    "pystiller>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.6",
    "pytest>=8.0",
]

[project.urls]
"Homepage" = "https://openefsa.github.io/efsa_tools/"
"Repository" = "https://github.com/openefsa/efsa_tools"
"Bug Tracker" = "https://github.com/openefsa/efsa_tools/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
